Fix grid bug with overlapping items

--- a/public/styles/app.css
+++ b/public/styles/app.css
@@ -679,20 +679,6 @@ table tbody tr:hover td {
     "barter-reset-btn  player-traded-value vendor-traded-value barter-confirm-btn";
 }
 
-#town-store-grid-player-traded-bg {
-  grid-area: 2 / 2 / 5 / 3; 
-  background-color: var(--bg02-half-transparent);
-  border-right: 1px solid var(--bg02);
-  pointer-events: none;
-}
-
-#town-store-grid-vendor-traded-bg {
-  grid-area: 2 / 3 / 5 / 4; 
-  background-color: var(--bg02-half-transparent);
-  border-left: 1px solid var(--bg02);
-  pointer-events: none;
-}
-
 #town-store-reset-btn {
   grid-area: barter-reset-btn;
 }
@@ -760,23 +746,34 @@ table tbody tr:hover td {
   padding: 8px;
 }
 
+#town-store-player-traded-bg {
+  grid-area: 2 / 2 / 5 / 3; 
+  background-color: var(--bg02-half-transparent);
+  border-right: 1px solid var(--bg02);
+}
+#town-store-vendor-traded-bg {
+  grid-area: 2 / 3 / 5 / 4; 
+  background-color: var(--bg02-half-transparent);
+  border-left: 1px solid var(--bg02);
+}
+
 .town-store-item.player-kept-caps   { grid-area: player-kept-caps; }
 .town-store-item.player-traded-caps { grid-area: player-traded-caps; }
 .town-store-item.vendor-kept-caps   { grid-area: vendor-kept-caps; }
 .town-store-item.vendor-traded-caps { grid-area: vendor-traded-caps; }
 
 .town-store-caps {
-  margin-top: 4px;
-  margin-bottom: 8px;
+  padding-top: 4px;
+  padding-bottom: 8px;
 }
 .town-store-caps[data-caps="0"] {
   color: var(--fg03);
 }
 
-.town-store-item.player-kept-item   { grid-area: player-kept-items; }
-.town-store-item.player-traded-item { grid-area: player-traded-items; }
-.town-store-item.vendor-kept-item   { grid-area: vendor-kept-items; }
-.town-store-item.vendor-traded-item { grid-area: vendor-traded-items; }
+#town-store-player-kept-items   { grid-area: player-kept-items; }
+#town-store-player-traded-items { grid-area: player-traded-items; }
+#town-store-vendor-kept-items   { grid-area: vendor-kept-items; }
+#town-store-vendor-traded-items { grid-area: vendor-traded-items; }
 
 #town-store-player-traded-value { grid-area: player-traded-value; }
 #town-store-vendor-traded-value { grid-area: vendor-traded-value; }
